--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.14",
     "@popperjs/core": "^2.11.8",
+    "@supabase/supabase-js": "^2.38.4",
     "bootstrap": "^5.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
