--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.4",
     "swiper": "^11.0.3"
   },
